// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Alert Index 1`] = `
<div
  class="chakra-alert css-1hwd9xd"
  role="alert"
>
  <span
    class="chakra-alert__icon css-1c6vscd"
  >
    <svg
      class="chakra-icon css-fi0ww0"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-0"
  >
    Title!
  </div>
  <div
    class="chakra-alert__desc css-6n7j50"
  >
    This is description.
  </div>
</div>
`;

exports[`Storyshots components/Alert No Description 1`] = `
<div
  class="chakra-alert css-1hwd9xd"
  role="alert"
>
  <span
    class="chakra-alert__icon css-1c6vscd"
  >
    <svg
      class="chakra-icon css-fi0ww0"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-0"
  >
    Title!
  </div>
  <div />
</div>
`;

exports[`Storyshots components/Fallback Index 1`] = `
<div
  class="chakra-alert css-1hwd9xd"
  role="alert"
>
  <span
    class="chakra-alert__icon css-1c6vscd"
  >
    <div
      class="chakra-spinner css-1e4oo9u"
    >
      <span
        class="css-8b45rq"
      >
        Loading...
      </span>
    </div>
  </span>
  <div
    class="chakra-alert__title css-0"
  >
    Loading...
  </div>
  <div />
</div>
`;

exports[`Storyshots components/Header Index 1`] = `
<div
  class="css-d2rqlb"
>
  <button
    class="chakra-button css-4xx2wk"
    type="button"
  >
    <a
      href="/"
    >
      <img
        alt="ギガンティック☆整地鯖のロゴ"
        height="100"
        src="https://github.com/GiganticMinecraft/branding/blob/master/server-logo-dark.png?raw=true"
        width="110"
      />
    </a>
  </button>
</div>
`;

exports[`Storyshots components/ServerLogo Dark 1`] = `
<img
  alt="ギガンティック☆整地鯖のロゴ"
  height="200"
  src="https://github.com/GiganticMinecraft/branding/blob/master/server-logo-dark.png?raw=true"
  width="300"
/>
`;

exports[`Storyshots components/ServerLogo Light 1`] = `
<img
  alt="ギガンティック☆整地鯖のロゴ"
  height="200"
  src="https://github.com/GiganticMinecraft/branding/blob/master/server-logo-light.png?raw=true"
  width="300"
/>
`;
